--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>キミの未来をHACKしよう
+                        <h1>turtle
                         </h1>
                     </div>
                 </div>
@@ -53,8 +53,8 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                              <h5 class="card-title">turtle love</h5>
+                              <p class="card-tex</p>
                               <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
                             </div>
                           </div>
