--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>キミの未来をHACKしよう
+                        <h1>you can do it!
                         </h1>
                     </div>
                 </div>
