--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./libs/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <title>BeEngineer 説明・体験会</title>
+    <title>flash of hathaway</title>
 </head>
 <body>
     <header>
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>Hathaway
+                        <h1 id="title">Hathaway
                         </h1>
                     </div>
                 </div>
@@ -53,9 +53,10 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title">flash of hathaway</h5>
+                              <p class="card-text">gandamu
+                                /</p>
+                              <p class="card-text"><small class="text-muted">http://gundam-hathaway.net/</small></p>
                             </div>
                           </div>
                         </div>
@@ -103,7 +104,7 @@
                             <div class="card-body">
                               <h5 class="card-title">タイトルテキスト</h5>
                               <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <p class="card-text"><small class="text-muted">http://gundam-hathaway.net/</small></p>
                             </div>
                           </div>
                         </div>
