--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./libs/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <title>BeEngineer 説明・体験会</title>
+    <title>Intel最高</title>
 </head>
 <body>
     <header>
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>windows最高
+                        <h1 id="title">Intel最高
                         </h1>
                     </div>
                 </div>
@@ -53,9 +53,10 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title">Core i9</h5>
+                              <p class="card-text">13900Kは24コア32スレッド<br>定格3.00Ghz<br>ターボブースト時5.80Ghzで稼働。</br>
+                              </p>
+                              <p class="card-text"><small class="text-muted">Ryzen9 7950Xが対抗馬</small></p>
                             </div>
                           </div>
                         </div>
@@ -69,9 +70,9 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトル</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキスト</small></p>
+                              <h5 class="card-title">Core i7</h5>
+                              <p class="card-text">13700Kは16コア24スレッド<br>定格3.4Ghz<br>ターボブースト時5.40Ghzで稼働。</br>
+                              <p class="card-text"><small class="text-muted">12900Kと同等<br>Ryzen7 7700Xが対抗馬</small></p>
                             </div>
                           </div>
                         </div>
@@ -85,9 +86,9 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title">Core i5</h5>
+                              <p class="card-text">13600Kは14コア20スレッド<br>定格3.5Ghz<br>ターボブースト時5.1Ghzで稼働。</br>
+                              <p class="card-text"><small class="text-muted">12700Kと同等<br>Ryzen5 7600Xが対抗馬<br>実は同じi5の13400、Alder Lakeのリネーム品</small></p>
                             </div>
                           </div>
                         </div>
@@ -101,9 +102,9 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title">Core i3</h5>
+                              <p class="card-text">13100は4コア8スレッド<br>定格3.4Ghz<br>ターボブースト時4.5Ghzで稼働。</p>
+                              <p class="card-text"><small class="text-muted">現在出ている13世代の中で一番性能低い。<br>13400と同じくAlder Lakeのリネーム品</small></p>
                             </div>
                           </div>
                         </div>
@@ -117,9 +118,9 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title">Celeron</h5>
+                              <p class="card-text">言うまでもないゴミ<cr>2コア2スレッド</p>
+                              <p class="card-text"><small class="text-muted">メインには絶対に使いたくない<br>サブにはいいのかも</small></p>
                             </div>
                           </div>
                         </div>
