--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,20 @@
     <link rel="stylesheet" href="./libs/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <title>BeEngineer 説明・体験会</title>
+    <title>aiueoaiueo</title>
 </head>
 <body>
     <header>
         <div class="container">
             <nav class="navbar navbar-light">
                 <a class="navbar-brand" href="#">
-                <img class="logo" src="images/logo.svg" alt=""  height="24">
                 </a>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                    <a class="nav-link" href="#TOP">TOP</a>
+                    <a class="nav-link" href="#TOP">saisyonimodoru</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#CONTENT">CONTENT</a>
+                    <a class="nav-link" href="#CONTENT">moziwouteru</a>
                     </li>
                     <li class="nav-item">
                     <button id="alert-btn" type="button" class="btn btn-primary">ALERT</button>
@@ -35,7 +34,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>aiueo
+                        <h1 id="title">aiueo
                         </h1>
                     </div>
                 </div>
@@ -49,28 +48,11 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                           <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
-                            <img src="./images/logo.svg" alt="" width="80%">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-12 col-md-12 col-sm-12">
-                    <div class="card mb-3">
-                        <div class="row g-0">
-                          <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
-                            <img src="./images/logo.svg" alt="" width="80%">
-                          </div>
-                          <div class="col-md-8">
-                            <div class="card-body">
-                              <h5 class="card-title">タイトル</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                              <h5 class="card-title">aiueo</h5>
+                              <p class="card-text">aiueoaiueoaiueoaiueoaiueoaiueo</p>
                               <p class="card-text"><small class="text-muted">テキスト</small></p>
                             </div>
                           </div>
@@ -81,29 +63,12 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                           <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
-                            <img src="./images/logo.svg" alt="" width="80%">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-12 col-md-12  col-sm-12">
-                    <div class="card mb-3">
-                        <div class="row g-0">
-                          <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
-                            <img src="./images/logo.svg" alt="" width="80%">
-                          </div>
-                          <div class="col-md-8">
-                            <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title">aiueoaiueo</h5>
+                              <p class="card-text">aiueoaiueoaiueoaiueoaiueo</p>
+                              <p class="card-text"><small class="text-muted">テキスト</small></p>
                             </div>
                           </div>
                         </div>
@@ -113,13 +78,42 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                           <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
-                            <img src="./images/logo.svg" alt="" width="80%">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title">aiueoaiueo</h5>
+                              <p class="card-text">aiueoaiueoaiueoaiueoaiueoaiueoaiueo</p>
+                              <p class="card-text"><small class="text-muted">テキスト</small></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-12  col-sm-12">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                          <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title">aiueoaiueo</h5>
+                              <p class="card-text">aiueoaiueoaiueoaiueoaiueoaiueoaiueoaiueoaiueo</p>
+                              <p class="card-text"><small class="text-muted">テキスト</small></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-12 col-sm-12">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                          <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title">aiueoaiueo</h5>
+                              <p class="card-text">aiueoaiueoaiueoaiueoaiueoaiueoaiueoaiueoaiueo</p>
+                              <p class="card-text"><small class="text-muted">テキスト</small></p>
                             </div>
                           </div>
                         </div>
@@ -134,7 +128,6 @@
                 <div class="col-6" style="display: flex; align-items:center; justify-content: center;">
                     <div>
                         <a href="#">
-                            <img src="./images/logo.svg" alt="" height="48">
                         </a>
                     </div>
                 </div>
