--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
         </div>
     </header>
     <section class="top-section" id="TOP">
-        <div class="top-content">
+        <div class="top-content"> 
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>rabbit
+                        <h1 id="title">rabbit
                         </h1>
                     </div>
                 </div>
