--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>2023/2/2
+                        <h1 id="title">2023/2/2
                         </h1>
                     </div>
                 </div>
