--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-light">
+      <nav class="navbar navbar-light">
                 <a class="navbar-brand" href="#">
                 <img class="logo" src="images/logo.svg" alt=""  height="24">
                 </a>
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1>douari
+                        <h1 id="title"><v class="i np"></v>
                         </h1>
                     </div>
                 </div>
@@ -53,13 +53,13 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
+                              <h5 class="card-title"dorayakihaorenokoubutu/h5>
+                              <p class="card-text"kaminogorir</p>
+                              <p class="card-text"><small class="text-muted">nip</small></p>
                             </div>
                           </div>
                         </div>
-                      </div>
+                  </div>
                 </div>
                 <div class="col-12 col-md-12 col-sm-12">
                     <div class="card mb-3">
@@ -69,9 +69,9 @@
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
-                              <h5 class="card-title">タイトル</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキスト</small></p>
+                              <h5 class="card-title">64x64</h5>
+                              <p class="card-text">tyank</p>
+                              <p class="card-text"><small class="text-muted">tyannk</small></p>
                             </div>
                           </div>
                         </div>
@@ -111,26 +111,32 @@
                 </div>
                 <div class="col-12 col-md-12 col-sm-12">
                     <div class="card mb-3">
-                        <div class="row g-0">
-                          <div class="col-md-4" style="display: flex; align-items:center; justify-content: center; padding:0.5rem;">
-                            <img src="./images/logo.svg" alt="" width="80%">
+                dfge;kmgqepngpk'aenrg'/ \\\\\ergmkg;langnrkafg-0">
+                          <div class="col-md-4" style="display: flexblank; align-items:center; justify-content: center; padding:0.5rem;">
+                            <img src="./images/logo.svg" alt\\\
+                            \\="" width="80%">
                           </div>
                           <div class="col-md-8">
-                            <div class="card-body">
-                              <h5 class="card-title">タイトルテキスト</h5>
-                              <p class="card-text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                              <p class="card-text"><small class="text-muted">テキストテキストテキスト</small></p>
-                            </div>
+                            <div class="caihinlnk/.nk/'n/rd-body">
+                        lass="card-title">error</h5>
+                              <p class="card-text">not FREE</p>blank
+                              <p class="card-text"><small class="text-muted">tttttttttt</small></p>
+                            </div>hottps.youtyube
                           </div>
-                        </div>
-                      </div>
+                        </div>\
+             
+             errorhottops.jriflf
+             not FREE
+             
+             blank
+             tttttttttt         </div>
                 </div>
             </div>
         </div>
     </section>
-    <footer class="my-footer">
+    <fo="my-footer">
         <div class="container">
-            <div class="row footer-row">
+            <div claooter-row">
                 <div class="col-6" style="display: flex; align-items:center; justify-content: center;">
                     <div>
                         <a href="#">
@@ -139,10 +145,10 @@
                     </div>
                 </div>
                 <div class="col-6" style="display: flex; align-items:center; justify-content: center;">
-                    <u><a class="privacy-policy-link">プライバシーポリシー</a></u>
+                    <u><a class="privacy-policy-link">プライバシーFREE</a></u>
                 </div>
             </div>
-        </div>
+        </di
     </footer>
     <!-- <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> -->
     <script src="./libs/bootstrap.js"></script>
